fix avatar initial alignment

--- a/src/modules/core/styles/contacts.css
+++ b/src/modules/core/styles/contacts.css
@@ -17,15 +17,16 @@
 }
 
 .avatarInitials {
+    font-family: 'raleway_medium', Arial, sans-serif;
     width: 40px;
     height: 40px;
     right: 142px;
     top: 7px;
     position: absolute;
     margin: 0;
-    font-size: 21px;
+    font-size: 14px;
     line-height: 40px;
-    letter-spacing: -2.2px;
+    letter-spacing: 0;
 }
 
 .titleYakaClub {
